.metadata/.plugins/org.eclipse.cdt.ui/TP_ublaze_Software_3D.build.log
17:26:21 **** Incremental Build of configuration Debug for project TP_ublaze_Software_3D ****
make all 
'Building file: ../src/helloworld.c'
'Invoking: MicroBlaze gcc compiler'
mb-gcc -Wall -O0 -g3 -c -fmessage-length=0 -MT"src/helloworld.o" -IC:/Workspace/TP_SOC_IP/ublaze_system_wrapper/export/ublaze_system_wrapper/sw/ublaze_system_wrapper/standalone_microblaze_0/bspinclude/include -mlittle-endian -mcpu=v11.0 -mxl-soft-mul -Wl,--no-relax -ffunction-sections -fdata-sections -MMD -MP -MF"src/helloworld.d" -MT"src/helloworld.o" -o "src/helloworld.o" "../src/helloworld.c"
'Finished building: ../src/helloworld.c'
' '
'Building file: ../src/it_timer.c'
'Invoking: MicroBlaze gcc compiler'
mb-gcc -Wall -O0 -g3 -c -fmessage-length=0 -MT"src/it_timer.o" -IC:/Workspace/TP_SOC_IP/ublaze_system_wrapper/export/ublaze_system_wrapper/sw/ublaze_system_wrapper/standalone_microblaze_0/bspinclude/include -mlittle-endian -mcpu=v11.0 -mxl-soft-mul -Wl,--no-relax -ffunction-sections -fdata-sections -MMD -MP -MF"src/it_timer.d" -MT"src/it_timer.o" -o "src/it_timer.o" "../src/it_timer.c"
../src/it_timer.c: In function 'init_interrupts':
../src/it_timer.c:65:41: error: 'XPAR_INTC_0_TMRCTR_0_INTERRUPT_VEC_ID' undeclared (first use in this function)
   65 | #define TMRCTR_INTERRUPT_ID             XPAR_INTC_0_TMRCTR_0_INTERRUPT_VEC_ID
      |                                         ^~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~
../src/it_timer.c:65:41: note: in definition of macro 'TMRCTR_INTERRUPT_ID'
   65 | #define TMRCTR_INTERRUPT_ID             XPAR_INTC_0_TMRCTR_0_INTERRUPT_VEC_ID
      |                                         ^~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~
../src/it_timer.c:65:41: note: each undeclared identifier is reported only once for each function it appears in
   65 | #define TMRCTR_INTERRUPT_ID             XPAR_INTC_0_TMRCTR_0_INTERRUPT_VEC_ID
      |                                         ^~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~
../src/it_timer.c:65:41: note: in definition of macro 'TMRCTR_INTERRUPT_ID'
   65 | #define TMRCTR_INTERRUPT_ID             XPAR_INTC_0_TMRCTR_0_INTERRUPT_VEC_ID
      |                                         ^~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~
make: *** [src/subdir.mk:29: src/it_timer.o] Error 1

17:26:21 Build Finished (took 648ms)

